--- a/basics4_functions.ipynb
+++ b/basics4_functions.ipynb
@@ -2,18 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6\n",
-      "yubyub\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "# functions look like def func_name(inputs):\n",
     "def double(x):\n",
@@ -57,7 +50,7 @@
    },
    "outputs": [],
    "source": [
-    "# write a function that finds the largest number given a list of numbers."
+    "# write a function that finds the largest number given a list of numbers"
    ]
   },
   {
