--- a/basics.ipynb
+++ b/basics.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#hello there, print a string\n",
@@ -13,7 +15,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# you can do math.\n",
@@ -23,7 +27,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "6-2"
@@ -32,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "3*6"
@@ -41,26 +49,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "8/4"
+    "1/3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# exponenents are a little different\n",
-    "2^3 #this is wrong"
+    "round(1/3, 4)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# exponenents are a little different, \n",
+    "2^3 #this is wrong, it's a bitwise operator not an exponent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# exponents use **\n",
@@ -70,27 +95,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# you can 'add' strings\n",
-    "\"the cat\" + \" in the hat.\""
+    "# you can 'add' strings, need quotes to be recognized as a string. ' vs \", doesn't matter.\n",
+    "print(\"the cat\" + \" in the hat.\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# or multiply them\n",
-    "\"squirel \"*3"
+    "\"squirrel \"*3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# mixing types is bad (sometimes)\n",
@@ -100,7 +131,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#you can check types\n",
@@ -110,7 +143,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "type(4)"
@@ -119,7 +154,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# mixing types is fine here\n",
@@ -129,7 +166,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# you can change types (sometimes)\n",
@@ -139,7 +178,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# this casting doesn't work\n",
@@ -160,7 +201,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# what do you think this code will output?\n",
@@ -177,8 +220,11 @@
    "source": [
     "# The fips code for Rhode Island is 44, the county code of Providence is 007.\n",
     "# A unique identifier for the county is formed by concatenating these codes together.\n",
-    "# Write an expression that concatenates the codes in this cell. Then add a new cell to the workbook.\n",
-    "# In the new cell, write a print statement that checks the type of the resulting identifier. It should be a string."
+    "# Write an expression that concatenates the codes in this cell. \n",
+    "\n",
+    "#Then add a new cell to the workbook.\n",
+    "\n",
+    "# In the new cell, write a print statement that prints the type of the previous expression. It should be a string."
    ]
   }
  ],
