--- a/basics2_loops.ipynb
+++ b/basics2_loops.ipynb
@@ -84,9 +84,11 @@
    "source": [
     "# inside/outside loop is determined by indentation\n",
     "counter = 0\n",
-    "for i in range(10,20): #i starts at 10 \n",
+    "for i in range(10,20): #i starts at 10 , add note [10,20)\n",
     "    if i % 2 == 0: # checks if i is even\n",
     "        counter += 1 # shorthand for counter = counter + 1\n",
+    "        print(\"this is i {}, this is counter {}\".format(i,counter))\n",
+    "    \n",
     "print(counter)"
    ]
   },
@@ -152,8 +154,7 @@
     "x=1\n",
     "y=1\n",
     "print(x)\n",
-    "print(y)\n",
-    "    "
+    "print(y)   "
    ]
   }
  ],
