--- a/basics3_lists.ipynb
+++ b/basics3_lists.ipynb
@@ -72,6 +72,7 @@
    "outputs": [],
    "source": [
     "# out of range error\n",
+    "\n",
     "print(x[10])"
    ]
   },
@@ -158,9 +159,10 @@
    },
    "outputs": [],
    "source": [
-    "# Read through 5.1.3 on list comprehensions.\n",
-    "# Define a list of all even numbers greater than or equal to 10 but less than 20 using a list comprehesion. \n",
-    "# You may find it helpful to refer back to the basics2_loops workbook. But use a list comprehension!  "
+    "# you can iterate over lists in for loops\n",
+    "for item in [5.0, \"blue\", 3, None, \"red\"]:\n",
+    "    if type(item) == str:\n",
+    "        print(item)"
    ]
   },
   {
@@ -171,10 +173,73 @@
    },
    "outputs": [],
    "source": [
-    "# you can iterate over lists in for loops\n",
-    "for item in [5.0, \"blue\", 3, None, \"red\"]:\n",
-    "    if type(item) == str:\n",
-    "        print(item)"
+    "# Create long list with a for loop.\n",
+    "x = []\n",
+    "for i in range(500):\n",
+    "    x.append(i)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# List comprehension is an convienent shortcut. https://docs.python.org/3/tutorial/datastructures.html\n",
+    "x = [i for i in range(500)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# List comprehension is using way of defining a new list from another list\n",
+    "y = [1,2,3]\n",
+    "x = [i**2 for i in y]\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x =[\"igloo\",\"apple\", \"magic\", \"base\", \"aim\", \"town\", \"market\", \"alt\", \"number\"]\n",
+    "# Use a list comprehension to create a new list of the first letter of each word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# if statement in list comprehension\n",
+    "x = [2**i in range(6) if i != 3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Define a list of all even numbers greater than or equal to 10 but less than 20 using a list comprehesion. \n",
+    "# You may find it helpful to refer back to the basics2_loops workbook. Use a list comprehension.  "
    ]
   }
  ],
