updated some comments

--- a/basics.ipynb
+++ b/basics.ipynb
@@ -8,7 +8,7 @@
    },
    "outputs": [],
    "source": [
-    "#hello there, print a string\n",
+    "# hello there, print a string. quote marks (either ' or \") indicate it's a string in python.\n",
     "print(\"May the force be with you.\")"
    ]
   },
@@ -100,7 +100,7 @@
    },
    "outputs": [],
    "source": [
-    "# you can 'add' strings, need quotes to be recognized as a string. ' vs \", doesn't matter.\n",
+    "# you can 'add' strings\n",
     "print(\"the cat\" + \" in the hat.\")"
    ]
   },
@@ -136,7 +136,7 @@
    },
    "outputs": [],
    "source": [
-    "#you can check types\n",
+    "# you can check types\n",
     "type(3.0)"
    ]
   },
