--- a/basics2_loops.ipynb
+++ b/basics2_loops.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "# variables are defined with =\n",
-    "x = 4 #running this code has no output, but the value is stored."
+    "x = 4 # running this code has no output, but the value is stored."
    ]
   },
   {
@@ -84,10 +84,11 @@
    "source": [
     "# inside/outside loop is determined by indentation\n",
     "counter = 0\n",
-    "for i in range(10,20): #i starts at 10 , add note [10,20)\n",
-    "    if i % 2 == 0: # checks if i is even\n",
+    "for i in range(10,20): #i starts at 10 , ends at 19. Think half-open interval [10, 20)\n",
+    "    if i % 2 == 0: # checks if i is even. Think i mod 2 or remainder when i is divided by 2. \n",
     "        counter += 1 # shorthand for counter = counter + 1\n",
-    "        print(\"this is i {}, this is counter {}\".format(i,counter))\n",
+    "        print(\"this is i: {}, this is counter: {}\".format(i,counter)) # prints variable values inside string\n",
+    "        # print(f\"this is i: {i}, this is counter: {counter}) # f-string works in python 3.6+\n",
     "    \n",
     "print(counter)"
    ]
@@ -100,7 +101,7 @@
    },
    "outputs": [],
    "source": [
-    "#What will this code output?\n",
+    "#What will this code output? Why?\n",
     "for i in range(3,8):\n",
     "    counter = 0\n",
     "    for j in range(6):\n",
@@ -139,7 +140,12 @@
    },
    "outputs": [],
    "source": [
-    "# write a triple loop that counts how often i > j > k where 0 <= i <= 6, 4 <= j <= 8, 2 <= k <= 5. Answer should be 7."
+    "# write a triple loop that counts how often i > j > k where 0 <= i <= 6, 4 <= j <= 8, 2 <= k <= 5. Answer should be 7.\n",
+    "# don't forget colons at the end of for/if statements.\n",
+    "# if statement condition can be written as: \n",
+    "# i > j > k \n",
+    "# or\n",
+    "# i > j and j > k"
    ]
   },
   {
