--- a/basics3_lists.ipynb
+++ b/basics3_lists.ipynb
@@ -9,15 +9,13 @@
    "outputs": [],
    "source": [
     "# here is a list https://docs.python.org/3/tutorial/index.html\n",
-    "x = [1,3,4]"
+    "x = [1, 3, 4]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# lists are mutable\n",
@@ -34,29 +32,25 @@
    "outputs": [],
    "source": [
     "# not all operations mutate the object in place though\n",
-    "x + [1,2,3]\n",
+    "x + [1, 2, 3]\n",
     "print(x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# this will change x\n",
-    "x.extend([1,2,3])\n",
+    "x.extend([1, 2, 3])\n",
     "print(x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# access a value in x\n",
@@ -79,9 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# change a value in a list\n",
@@ -92,22 +84,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# access several values and change them\n",
-    "x[2:5] = [0,0,0] # make sure length matches\n",
+    "x[2:5] = [0, 0, 0] # make sure length matches\n",
     "print(x)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# find a value\n",
@@ -117,9 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# throws an error if not found\n",
@@ -189,7 +175,7 @@
    "outputs": [],
    "source": [
     "# List comprehension is an convienent shortcut. https://docs.python.org/3/tutorial/datastructures.html\n",
-    "x = [i for i in range(500)]"
+    "x = [i for i in range(500)] # A third way to make this particular list is: x = list(range(500))"
    ]
   },
   {
@@ -200,8 +186,8 @@
    },
    "outputs": [],
    "source": [
-    "# List comprehension is using way of defining a new list from another list\n",
-    "y = [1,2,3]\n",
+    "# List comprehension is a useful way of defining a new list from another list\n",
+    "y = [8,3,7]\n",
     "x = [i**2 for i in y]\n",
     "print(x)"
    ]
@@ -215,7 +201,9 @@
    "outputs": [],
    "source": [
     "x =[\"igloo\",\"apple\", \"magic\", \"base\", \"aim\", \"town\", \"market\", \"alt\", \"number\"]\n",
-    "# Use a list comprehension to create a new list of the first letter of each word"
+    "# Use a list comprehension to create a new list of the first letter of each word\n",
+    "# You can access the first letter of a string the same way you access the first item of a list. \n",
+    "# eg if x = \"word\", x[0] is the first letter"
    ]
   },
   {
