--- a/basics4_functions.ipynb
+++ b/basics4_functions.ipynb
@@ -39,15 +39,13 @@
     "print(isPrime(43))\n",
     "print(isPrime(\"tree\"))\n",
     "print(isPrime(3.14))\n",
-    "print(isPrime(5.0))"
+    "print(isPrime(5.0)) # huh, why?"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# write a function that finds the largest number given a list of numbers"
