--- a/basics5_numpy.ipynb
+++ b/basics5_numpy.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "# more array construction examples\n",
-    "m = np.array([[1,2,3],[4,5,6],[7,8,9]]) # not really a matrix\n",
+    "m = np.array([[1,2,3],[4,5,6],[7,8,9]]) # not really a \"matrix\"\n",
     "print(m)\n",
     "\n",
     "I = np.eye(3)\n",
@@ -55,7 +55,7 @@
    },
    "outputs": [],
    "source": [
-    "# basic attributes\n",
+    "# some basic attributes\n",
     "print(m.shape) # dimensions\n",
     "print(m.ndim)  # number of dimensions\n",
     "print(m.size)  # number of elements\n",
@@ -249,7 +249,8 @@
    },
    "outputs": [],
    "source": [
-    "# draw 3 samples with replace from [10,4,3,6,18] where the probabilities of each are [.2,.3,.2,.1,.2] resp."
+    "# draw 3 samples with replacement from [10,4,3,6,18] where the probabilities of each are [.2,.3,.2,.1,.2] resp.\n",
+    "# Use https://docs.scipy.org/doc/numpy-1.15.0/reference/routines.random.html or google to figure out how."
    ]
   },
   {
