--- a/basics3_lists.ipynb
+++ b/basics3_lists.ipynb
@@ -214,7 +214,7 @@
    },
    "outputs": [],
    "source": [
-    "# if statement in list comprehension\n",
+    "# if statement in list comprehension. Find the bug\n",
     "x = [2**i in range(6) if i != 3]"
    ]
   },
